--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -52,4 +52,5 @@ panic = "deny"
 
 [features]
 default = []
+levm-l2 = ["ethrex-vm/l2", "zkvm_interface/l2", "ethrex-blockchain/l2"]
 metrics = ["ethrex-metrics/l2"]
