--- a/crates/l2/Makefile
+++ b/crates/l2/Makefile
@@ -118,7 +118,7 @@ update-system-contracts:
 # L2
 init-l2: init-metrics init-l2-no-metrics ## 🚀 Initializes an L2 Lambda ethrex Client with metrics
 
-init-l2-no-metrics: init-metrics ## 🚀 Initializes an L2 Lambda ethrex Client
+init-l2-no-metrics: ## 🚀 Initializes an L2 Lambda ethrex Client
 	if [[ -z "$$BASED" ]]; then \
 		FEATURES="l2,metrics"; \
 		echo "Running ethrex L2 vanilla"; \
