--- a/crates/networking/rpc/Cargo.toml
+++ b/crates/networking/rpc/Cargo.toml
@@ -26,7 +26,7 @@ rand.workspace = true
 tokio-util.workspace = true
 reqwest.workspace = true
 k256 = { version = "0.13.3", features = ["ecdh"] }
-libsecp256k1 = "0.7.1"
+libsecp256k1.workspace = true
 sha3 = "0.10.8"
 sha2.workspace = true
 
