ci: only run with changes if the trie crate changes

--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: ["**"]
     paths:
-      - "crates/l2/**"
+      - "crates/common/trie"
 
 permissions:
   # deployments permission to deploy GitHub pages website
