add new with hooks

--- a/crates/l2/Makefile
+++ b/crates/l2/Makefile
@@ -130,6 +130,7 @@ init-l2: init-metrics ## 🚀 Initializes an L2 Lambda ethrex Client
 	--http.addr 0.0.0.0 \
 	--authrpc.port ${L2_AUTH_PORT} \
 	--metrics.port ${L2_PROMETHEUS_METRICS_PORT} \
+	--evm levm \
 	--datadir ${ethrex_L2_DEV_LIBMDBX}
 
 init-metrics: ## 🚀 Initializes Grafana and Prometheus with containers
