--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -35,4 +35,4 @@ jobs:
         run: |
           cd crates/l2
           cp config_example.toml config.toml
-          make ci_test
+          make test-tmux
