Revert "add test-tmux as integration test"
This reverts commit 208fe3a7fb4c26921ffa757eadc8d27d84d830ce.

--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -35,4 +35,4 @@ jobs:
         run: |
           cd crates/l2
           cp config_example.toml config.toml
-          make test-tmux
+          make ci_test
