--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -45,4 +45,4 @@ jobs:
         run: |
           cd crates/l2
           cp config_example.toml config.toml
-          ../../target/release/ethrex_prover & make ci_test
+          make ci_test & ../../target/release/ethrex_prover
