--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -31,19 +31,8 @@ jobs:
       - name: Caching
         uses: Swatinem/rust-cache@v2
 
-      - name: RISC-V SP1 toolchain install
-        run: |
-          curl -L https://sp1.succinct.xyz | bash
-          ~/.sp1/bin/sp1up --version 4.1.0
-
-      - name: Build prover
-        run: |
-          cd crates/l2
-          PROVER=sp1 make build-prover
-
       - name: Run L2 integration test
         run: |
           cd crates/l2
           cp config_example.toml config.toml
-          cp .env.example .env
-          make ci_test & ../../target/release/ethrex_prover
+          make ci_test
