Allow zkvm interfaces to access internal vm modules.

--- a/crates/l2/prover/zkvm/interface/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/Cargo.toml
@@ -10,7 +10,9 @@ serde_json = "1.0.117"
 thiserror = "2.0.9"
 
 ethrex-common = { path = "../../../../common/", default-features = false }
-ethrex-vm = { path = "../../../../vm", default-features = false }
+ethrex-vm = { path = "../../../../vm", default-features = false, features = [
+    "internal",
+] }
 ethrex-rlp = { path = "../../../../common/rlp", default-features = false }
 ethrex-storage = { path = "../../../../storage", default-features = false }
 ethrex-trie = { path = "../../../../common/trie", default-features = false }
