ci: compare results

--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -45,11 +45,18 @@ jobs:
         run: |
           cd crates/common/trie
           make build-ethrex-bench
-          make ethrex-bench
+          make ethrex-bench | tee bench-${{ matrix.trie-version }}.txt
 
       - name: Build cita trie benchmark
         if: ${{ matrix.trie-version == 'cita' }}
         run: |
           cd crates/common/trie
           make build-cita-bench
-          make cita-bench
+          make cita-bench | tee bench-${{ matrix.trie-version }}.txt
+      - name: Store benchmark result
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          name: Trie Benchmark
+          output-file-path: bench-${{ matrix.trie-version}}.txt
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          auto-push: true
