--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
-        if: ${ matrix.trie-version == "cita" || matrix-trie-version == "head" }
+        if: ${{ matrix.trie-version == "cita" || matrix-trie-version == "head" }}
         with:
           fetch-depth: 0
           ref: HEAD
