--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
-        if: ${ matrix.trie-version == 'base' }
+        if: ${{ matrix.trie-version == 'base' }}
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request[matrix.trie-version].sha }}
