--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        trie-version: ["head", "base", "cita"]
+        trie-version: ["head", "cita"]
     steps:
       - name: Populate cache
         uses: actions/cache@v4
