--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -67,6 +67,7 @@ jobs:
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
+          tool: "cargo"
           name: Trie Benchmark
           output-file-path: bench-${{ matrix.trie-version}}.txt
           github-token: ${{ secrets.GITHUB_TOKEN }}
