--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -71,4 +71,5 @@ jobs:
           name: Trie Benchmark
           output-file-path: crates/common/trie/bench-${{ matrix.trie-version}}.txt
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          summary-always: true
           auto-push: true
