--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -26,6 +26,7 @@ crc32fast.workspace = true
 bytes.workspace = true
 hex.workspace = true
 lazy_static.workspace = true
+rayon = "1.5"
 
 [dev-dependencies]
 hex-literal.workspace = true
