--- a/crates/l2/Makefile
+++ b/crates/l2/Makefile
@@ -172,9 +172,10 @@ ci_test: ## 🚧 Runs the L2's integration test, used by the github's CI
 
 	# We create an empty .env file simply because if the file
 	# does not exists, the container fails to write to it.
-	touch .env
+	cp .env.example .env
 	CI_ETHREX_WORKDIR=${CI_ETHREX_WORKDIR} docker compose -f ${ethrex_L2_DOCKER_COMPOSE_PATH} down
 	CI_ETHREX_WORKDIR=${CI_ETHREX_WORKDIR} docker compose -f ${ethrex_L2_DOCKER_COMPOSE_PATH} up -d --build
+	../../target/release/ethrex_prover & cargo test l2 --release -- --nocapture --test-threads=1
 
 test: ## 🚧 Runs the L2's integration test, run `make init` and in a new terminal make test
 	CONFIG_FILE=config.toml cargo test l2 --release -- --nocapture --test-threads=1 || (echo "The tests have failed.\n Is the L2 running? To start it, run:\n make rm-db-l1; make rm-db-l2; make restart" ; exit 1)
