--- a/crates/common/trie/Cargo.toml
+++ b/crates/common/trie/Cargo.toml
@@ -39,9 +39,6 @@ uuid = { version = "1.16.0", features = ["v4"] }
 path = "./trie.rs"
 
 [[bench]]
-name = "ethrex_trie_bench"
+name = "trie_bench"
 harness = false
 
-[[bench]]
-name = "cita_trie_bench"
-harness = false
