--- a/crates/networking/p2p/Cargo.toml
+++ b/crates/networking/p2p/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ethrex-p2p"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -38,6 +39,10 @@ rand = "0.8.5"
 
 [dev-dependencies]
 hex-literal = "0.4.1"
+
+[build-dependencies]
+serde_json = "1.0.117"
+serde.workspace = true
 
 [lib]
 path = "./p2p.rs"
