--- a/cmd/ef_tests/state/Cargo.toml
+++ b/cmd/ef_tests/state/Cargo.toml
@@ -29,6 +29,7 @@ revm = { version = "19.0.0", features = [
     "optional_no_base_fee",
     "optional_block_gas_limit",
 ], default-features = false }
+tokio.workspace = true
 
 [dev-dependencies]
 hex = "0.4.3"
