--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ ethrex-prover = { path = "./crates/l2/prover" }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
 
+async-trait = "0.1.88"
 ethereum-types = { version = "0.15.1", features = ["serialize"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
