--- a/crates/blockchain/metrics/docker-compose-metrics.yaml
+++ b/crates/blockchain/metrics/docker-compose-metrics.yaml
@@ -1,11 +1,15 @@
 # example: docker compose -f docker-compose-metrics.yaml -f docker-compose-metrics-l2.override.yaml up
 services:
   prometheus:
+    profiles:
+      - metrics
     image: prom/prometheus
     command: --config.file=/etc/prometheus/prometheus.yaml
     #volumes: defined in the .overrides file
     #ports: defined in the .overrides file
   grafana:
+    profiles:
+      - metrics
     image: grafana/grafana
     volumes:
       - ./provisioning/grafana_provisioning/dashboards/common_dashboards:/etc/grafana/provisioning/dashboards/common_dashboards
