--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -44,4 +44,5 @@ jobs:
       - name: Run L2 integration test
         run: |
           cd crates/l2
+          cp config_example_docker.toml config.toml
           make ci_test
