--- a/crates/networking/p2p/Cargo.toml
+++ b/crates/networking/p2p/Cargo.toml
@@ -41,8 +41,8 @@ rand = "0.8.5"
 hex-literal = "0.4.1"
 
 [build-dependencies]
-serde_json = "1.0.117"
 serde.workspace = true
+toml = "0.7"
 
 [lib]
 path = "./p2p.rs"
